--- a/TanuDapper/appsettings.json
+++ b/TanuDapper/appsettings.json
@@ -1,5 +1,6 @@
 {
   "Logging": {
+    "Logpath" :  "C:\\Project Log\\Logs\\AppLog.txt",
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
